# wort-wirbel-api

./: .flake8  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  test.yml
alembic/versions/: 001_create_words_table.py
app/: __init__.py  main.py
app/application/: __init__.py  health_service.py  info_service.py  services.py  word_service.py
app/domain/: __init__.py  models.py
app/infrastructure/: __init__.py  config.py
app/infrastructure/database/: __init__.py  models.py  session.py
app/infrastructure/repositories/: __init__.py  word_repository.py
app/presentation/: __init__.py  api.py
app/routers/: __init__.py
docs/: TESTING_SETUP.md  WORD_SCHEMA_IMPLEMENTATION.md  database_schema.md
migrations/: env.py
migrations/versions/: 001_initial_word_schema.py  002_comprehensive_word_schema.py  8311ce351b45_first_migration.py
scripts/: start-test-db.bat  start-test-db.sh  stop-test-db.bat  stop-test-db.sh
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_main.py  test_word_json_compliance.py  test_word_model.py  test_word_repository.py  test_word_service.py  test_word_spec_compliance.py
tests/integration/: test_database.py
